Source/WebCore/dom/Element.h
@@ -200,7 +200,7 @@ public:
     double offsetWidth();
     double offsetHeight();
 
-    bool isInsideViewport(const IntRect* visibleRect = nullptr) const;
+    bool mayCauseRepaintInsideViewport(const IntRect* visibleRect = nullptr) const;
 
     // FIXME: Replace uses of offsetParent in the platform with calls
     // to the render layer and merge bindingsOffsetParent and offsetParent.
